Fix full-bleed photos

--- a/src/css/shared.less
+++ b/src/css/shared.less
@@ -123,6 +123,9 @@ footer {
 
 // inline photo styles
 .photo {
+  max-width: 1200px;
+  margin: auto;
+
   .credit {
     text-align: right;
     font-family: @df-sans;
